--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -38,7 +38,7 @@ jobs:
           aws-region: us-west-1
       
       - name: deploy to s3
-        run: aws s3 sync ./dist/ s3://{{ AWS_S3_SKICYCLERUN }}/
+        run: aws s3 sync ./dist/ s3://${{ AWS_S3_SKICYCLERUN }}/
       
       - name: invalidate cloudfront cache
         run: aws cloudfront create-invalidation --distribution-id {{ MY_CLOUDFRONT_DISTRO_ID }}--paths "/*" "/"
