--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -43,4 +43,4 @@ jobs:
         run: aws s3 sync ./dist/ s3://$AWS_S3_SKICYCLERUN/
       
       - name: invalidate cloudfront cache
-        run: aws cloudfront create-invalidation --distribution-id {{ MY_CLOUDFRONT_DISTRO_ID }}--paths "/*" "/"
+        run: aws cloudfront create-invalidation --distribution-id {{ EARVLGQCWG1WP }} --paths "/*" "/"
