--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -3,6 +3,9 @@
 # To get started with Astro see: https://docs.astro.build/en/getting-started/
 #
 name: Deploy SkiCycleRun (astro site) to AWS S3 Static Host
+author: Timothy Halley
+description: Build and deploy skicyclerun.com to AWS S3 static website
+
 env:
   AWS_S3_SKICYCLERUN: skicyclerun.com
   AWS_CLOUDFRONT_ID: EARVLGQCWG1WP
@@ -15,6 +18,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+runs:
+  using: 'node20'
+  main: 'main.js'
+  
 jobs:
   deploy_to_s3:
     name: deploy astro to s3
