--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -30,9 +30,11 @@ jobs:
         uses: actions/checkout@v3
         
       - name: setup
+  
         run: | 
           npm install
           npm run build
+          node-version: '20'
       
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
