--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -29,12 +29,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20
+      
       - name: setup
   
         run: | 
           npm install
           npm run build
-          node-version: '20'
       
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
