2024-07-09 Add videos to site

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/rss": "latest",
     "@resvg/resvg-js": "latest",
     "astro": "latest",
+    "astro-embed": "latest",
     "fuse.js": "latest",
     "github-slugger": "latest",
     "remark-collapse": "latest",
