2025 July - upgrade to Astro 5.12

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@astrojs/mdx": "latest",
     "@astrojs/rss": "latest",
     "@resvg/resvg-js": "latest",
-    "astro": "latest",
     "astro-embed": "latest",
     "fuse.js": "latest",
     "github-slugger": "latest",
@@ -39,6 +38,7 @@
     "@types/github-slugger": "latest",
     "@types/react": "latest",
     "@typescript-eslint/parser": "latest",
+    "astro": "^5.12.0",
     "astro-eslint-parser": "latest",
     "commitizen": "latest",
     "cz-conventional-changelog": "latest",
