--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "An Adventum site",
   "homepage": "https://skicyclerun.com",
   "type": "module",
-  "version": "0.5.6",
+  "version": "0.5.8",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -38,7 +38,7 @@
     "@types/github-slugger": "latest",
     "@types/react": "latest",
     "@typescript-eslint/parser": "latest",
-    "astro": "^5.12.0",
+    "astro": "latest",
     "astro-eslint-parser": "latest",
     "commitizen": "latest",
     "cz-conventional-changelog": "latest",
