Refactor configuration and update components
- Replaced SITE configuration with SkiCycleRunConfig in various files for consistency.
- Added PostCards component for rendering blog post cards.
- Introduced static page configuration and validation for slugs.
- Enhanced styles with new topography, animations, and scrollbar styles.
- Updated utility functions for generating Open Graph images and pagination.
- Removed deprecated types and consolidated type definitions.
- Improved localization support with new translation keys and language files.
- Added new constants for blog types and updated related logic.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@astrojs/rss": "latest",
     "@resvg/resvg-js": "latest",
     "astro-embed": "latest",
+    "astro-icon": "latest",
     "fuse.js": "latest",
-    "github-slugger": "latest",
+    "overlayscrollbars": "latest",
     "remark-collapse": "latest",
     "remark-toc": "latest",
     "satori": "latest",
@@ -38,7 +39,7 @@
     "@types/github-slugger": "latest",
     "@types/react": "latest",
     "@typescript-eslint/parser": "latest",
-    "astro": "^5.12.8",
+    "astro": "latest",
     "astro-eslint-parser": "latest",
     "commitizen": "latest",
     "cz-conventional-changelog": "latest",
