feat: Add new blog posts on GenAI research, travel destinations, and vlogs; implement dynamic layouts for posts based on type; enhance authentication and content protection features

--- a/package.json
+++ b/package.json
@@ -20,47 +20,53 @@
   "dependencies": {
     "@astrojs/check": "latest",
     "@astrojs/mdx": "latest",
+    "@astrojs/node": "latest",
     "@astrojs/rss": "latest",
-    "@aws-amplify/ui-react": "^6.12.0",
+    "@aws-amplify/adapter-nextjs": "latest",
+    "@aws-amplify/auth": "latest",
+    "@aws-amplify/ui-react": "latest",
     "@resvg/resvg-js": "latest",
     "astro-embed": "latest",
     "astro-icon": "latest",
-    "aws-amplify": "^6.15.5",
+    "aws-amplify": "latest",
     "fuse.js": "latest",
+    "marked": "^16.2.1",
     "overlayscrollbars": "latest",
     "remark-collapse": "latest",
     "remark-toc": "latest",
     "satori": "latest"
   },
   "devDependencies": {
-    "@astrojs/react": "latest",
+    "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "latest",
     "@astrojs/tailwind": "latest",
-    "@aws-amplify/backend": "^1.16.1",
-    "@aws-amplify/backend-cli": "^1.8.0",
+    "@aws-amplify/backend": "latest",
+    "@aws-amplify/backend-cli": "latest",
     "@divriots/jampack": "latest",
+    "@rollup/plugin-replace": "latest",
     "@tailwindcss/typography": "latest",
     "@types/github-slugger": "latest",
+    "@types/marked": "^5.0.2",
     "@types/react": "latest",
     "@typescript-eslint/parser": "latest",
     "astro": "latest",
     "astro-eslint-parser": "latest",
-    "aws-cdk-lib": "^2.204.0",
+    "aws-cdk-lib": "latest",
     "commitizen": "latest",
-    "constructs": "^10.4.2",
+    "constructs": "latest",
     "cz-conventional-changelog": "latest",
-    "esbuild": "^0.25.9",
+    "esbuild": "latest",
     "eslint": "latest",
     "eslint-plugin-astro": "latest",
     "lint-staged": "latest",
     "prettier": "latest",
     "prettier-plugin-astro": "latest",
     "prettier-plugin-tailwindcss": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwindcss": "latest",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "tsx": "latest",
+    "typescript": "latest"
   },
   "config": {
     "commitizen": {
