--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "0.9.1",
   "scripts": {
     "dev": "astro dev",
-    "devs": "astro dev --https --cert skicyclerun_cert.pem --key skicyclerun_key.pem",
+    "devs": "astro dev --https --cert localhost+2.pem --key localhost+2-key.pem",
     "start": "astro dev",
     "build": "astro build && jampack ./dist",
     "preview": "astro preview",
@@ -22,44 +22,32 @@
     "@astrojs/mdx": "latest",
     "@astrojs/node": "latest",
     "@astrojs/rss": "latest",
-    "@aws-amplify/adapter-nextjs": "latest",
-    "@aws-amplify/auth": "latest",
-    "@aws-amplify/ui-react": "latest",
-    "@resvg/resvg-js": "latest",
-    "astro-embed": "latest",
-    "astro-icon": "latest",
-    "aws-amplify": "latest",
+    
+    "aws-jwt-verify": "^5.1.0",
     "fuse.js": "latest",
+    "react-globe.gl": "latest",
     "marked": "latest",
     "overlayscrollbars": "latest",
-    "react-globe.gl": "latest",
-    "remark-collapse": "latest",
+  "react": "18.3.1",
     "remark-toc": "latest",
-    "satori": "latest",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "satori": "latest"
   },
+    "react-dom": "18.3.1",
+    "remark-collapse": "latest",
   "devDependencies": {
     "@astrojs/react": "latest",
     "@astrojs/sitemap": "latest",
     "@astrojs/tailwind": "latest",
-    "@aws-amplify/backend": "latest",
-    "@aws-amplify/backend-cli": "latest",
     "@divriots/jampack": "^0.15.0",
     "@rollup/plugin-replace": "latest",
     "@tailwindcss/typography": "latest",
-    "@types/github-slugger": "latest",
-    "@types/marked": "latest",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/parser": "latest",
     "astro": "latest",
     "astro-eslint-parser": "latest",
-    "aws-cdk-lib": "latest",
-    "commitizen": "^4.3.1",
-    "constructs": "latest",
-    "cz-conventional-changelog": "latest",
-    "esbuild": "latest",
+    
+  "esbuild": "latest",
     "eslint": "latest",
     "eslint-plugin-astro": "latest",
     "lint-staged": "latest",
