Big Launch Version

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "astro dev",
     "devs": "astro dev --https --cert localhost+2.pem --key localhost+2-key.pem",
     "start": "astro dev",
-    "build": "astro build && jampack ./dist",
+    "build": "astro build",
     "preview": "astro preview",
     "sync": "astro sync",
     "astro": "astro",
@@ -22,6 +22,7 @@
     "@astrojs/mdx": "latest",
     "@astrojs/node": "latest",
     "@astrojs/rss": "latest",
+    "astro-embed": "^0.9.1",
     "aws-jwt-verify": "^5.1.0",
     "fuse.js": "latest",
     "marked": "latest",
@@ -36,7 +37,6 @@
     "@astrojs/react": "latest",
     "@astrojs/sitemap": "latest",
     "@astrojs/tailwind": "latest",
-    "@divriots/jampack": "^0.15.0",
     "@rollup/plugin-replace": "latest",
     "@tailwindcss/typography": "latest",
     "@types/react": "18.3.5",
