--- a/!help_md/!env.example
+++ b/!help_md/!env.example
@@ -1,4 +1,4 @@
-# SkiCycleRun.dev Environment Variables
+# SkiCycleRun.com Environment Variables
 # Copy this file to .env and fill in your actual values
 
 # Site Configuration
