--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ PUBLIC_COGNITO_REGION=us-west-2
 PUBLIC_COGNITO_SCOPES=openid,email,profile,phone
 PUBLIC_COGNITO_REDIRECT_URI=/
 PUBLIC_COGNITO_LOGOUT_URI=/
+# Ordered list of sign-in options (comma separated). Supported values: PASSWORD, EMAIL_OTP, SMS_OTP
+PUBLIC_AUTH_METHODS=EMAIL_OTP,SMS_OTP,PASSWORD
+# Optional: override expected OTP code length (4-8). Default mirrors Cognito.
+# PUBLIC_COGNITO_DEFAULT_OTP_LENGTH=8
 
 # Debug Output Configuration
 # Set to 'true' to enable console logging (localhost default)
