--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -66,7 +66,7 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
 
       - name: deploy to s3
-        run: aws s3 sync ./dist/ s3://$AWS_S3_SKICYCLERUN/
+        run: aws s3 sync ./dist/ s3://$AWS_S3_SKICYCLERUN/ --delete
 
       - name: invalidate cloudfront cache
         run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths "/*" "/"
